@@ -157,13 +157,13 @@ void ConfigImpl::initializeVariables()
 		{ "cupt::resolver::synchronize-by-source-versions", "none" },
 		{ "cupt::resolver::track-reasons", "no" },
 		{ "cupt::resolver::type", "fair" },
-		{ "cupt::resolver::score::new", "-300" },
-		{ "cupt::resolver::score::removal", "-500" },
+		{ "cupt::resolver::score::new", "-5" },
+		{ "cupt::resolver::score::removal", "-1500" },
 		{ "cupt::resolver::score::removal-of-essential", "-200000" },
 		{ "cupt::resolver::score::upgrade", "100" },
 		{ "cupt::resolver::score::downgrade", "-800" },
 		{ "cupt::resolver::score::position-penalty", "-2" },
-		{ "cupt::resolver::score::quality-adjustment", "0" },
+		{ "cupt::resolver::score::quality-adjustment", "40" },
 		{ "cupt::resolver::score::unsatisfied-recommends", "-240" },
 		{ "cupt::resolver::score::unsatisfied-suggests", "-60" },
 		{ "cupt::resolver::score::failed-synchronization", "-80" },
