@@ -31,6 +31,8 @@ ScoreManager::ScoreManager(const Config& config, const shared_ptr< const Cache >
 	: __cache(cache)
 {
 	__quality_adjustment = config.getInteger("cupt::resolver::score::quality-adjustment");
+	__preferred_version_default_pin = config.getString("apt::default-release").empty() ?
+			500 : 990;
 	__subscore_multipliers[ScoreChange::SubScore::Version] = 1u;
 	// from 1, skipping SubScore::Version
 	for (size_t i = 1; i < ScoreChange::SubScore::Count; ++i)
@@ -67,7 +69,7 @@ ScoreManager::ScoreManager(const Config& config, const shared_ptr< const Cache >
 
 ssize_t ScoreManager::__get_version_weight(const shared_ptr< const BinaryVersion >& version) const
 {
-	return version ? __cache->getPin(version) : 0;
+	return version ? (__cache->getPin(version) - __preferred_version_default_pin) : 0;
 }
 
 ScoreChange ScoreManager::getVersionScoreChange(const shared_ptr< const BinaryVersion >& originalVersion,
